packages/wasm/ballerina-lang-go/parser/testdata/tokens/javainterop/negative/method_sig_not_match5.token
(import 6 0x00 ())
(ident, "ballerina" 9 0x00 ())
(/ 1 0x00 ())
(ident, "jballerina" 10 0x00 ())
(. 1 0x00 ())
(ident, "java" 4 0x00 ())
(; 1 0x00 ())
(public 6 0x00 ())
(function 8 0x00 ())
(ident, "acceptStringErrorReturnWhichThrowsCheckedException" 50 0x00 ())
(( 1 0x00 ())
(string 6 0x00 ())
(ident, "s" 1 0x00 ())
() 1 0x00 ())
(= 1 0x00 ())
(@ 1 0x00 ())
(ident, "java" 4 0x00 ())
(: 1 0x00 ())
(ident, "Method" 6 0x00 ())
({ 1 0x00 ())
(ident, "'class" 6 0x00 ())
(: 1 0x00 ())
(string, ""org/ballerinalang/nativeimpl/jvm/tests/StaticMethods"" 54 0x00 ())
(} 1 0x00 ())
(external 8 0x00 ())
(; 1 0x00 ())
(2 0 0x00 ())
